<resources>
    <string name="app_name">出包魔法师</string>
    <string name="hint_user_id">请输入账号</string>
    <string name="go_to_register">前往注册</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="game">游戏</string>
    <string name="socia">社交</string>
    <string name="profile">我</string>
    <string name="create_room">创建房间</string>
    <string name="join_room">加入房间</string>
    <string name="chat">聊天</string>
    <string name="group">群组</string>
    <string name="contact">通讯录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="welcome_content">出包魔法师</string>
    <string name="logout">登出</string>
    <string name="add_friend">添加好友</string>
    <string name="send">发送</string>
    <string name="error_hint">请求失败，请检查网络</string>
    <string name="add_success_hint">请求添加成功，等待对方同意</string>
    <string name="id_group">房间号：%s</string>
    <string name="exit_group_success">退出房间成功</string>
    <string name="exit_group_fail">退出房间失败</string>
    <string name="destroy_group_success">解散房间成功</string>
    <string name="destroy_group_fail">解散房间失败</string>
    <string name="enter_group_hint">请输入房间号</string>
    <string name="pass">跳过</string>
    <string name="throw_dice">掷骰子</string>
    <string name="do_magic">施放魔法</string>
    <string name="start_game">开始游戏</string>
    <string name="player_point">获得分数：%s</string>
    <string name="hint_updating">正在操作中，请稍后</string>
    <string name="hint_loading">正在加载中，请稍后</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="input_error">输入异常，请确认异常项</string>
    <string name="mode_speak">语音模式</string>
</resources>
